# Magic-Ball

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
magic_ball/: __init__.py  app.py  forms.py  settings.py
magic_ball/services/: answer_generator.py
magic_ball/templates/: 404.html  base.html  index.html  submit_input.html  table.html
